[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-signal-openenv"
version = "1.0.0"
description = "OpenEnv traffic signal control environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "openai>=1.30.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "python-multipart>=0.0.9",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]
